<resources>
    <string name="app_name">Shadowfax Rider</string>
    <string name="custom_font_normal">fonts/OpenSansRegular.ttf</string>
    <string name="custom_font_italic">fonts/OpenSansItalic.ttf</string>
    <string name="custom_font_bold">fonts/OpenSansBold.ttf</string>
    <string name="nav_drawer_item_order">Orders</string>
    <string name="nav_drawer_item_payout">Payout</string>
    <string name="nav_drawer_item_fino_screen">My Balance</string>
    <string name="nav_drawer_item_about_app">About</string>
    <string name="nav_drawer_item_help">Help</string>
    <string name="nav_drawer_item_send_logs">Send Logs</string>
    <string name="nav_drawer_item_force_sync">Force Sync</string>
    <string name="nav_drawer_item_update_app">Update App</string>
    <string name="nav_drawer_item_my_profile">My Profile</string>
    <string name="nav_drawer_item_rider_referral">Refer and Earn</string>
    <string name="nav_drawer_item_app_upgrade">App Upgrade</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="accept">Accept</string>
    <string name="new_order_message">New Order</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="title_activity_day_salary_payout">Day Salary Payout Activity</string>
    <string name="number">9999999999</string>
    <string name="Order_Id">Order Id</string>
    <string name="username">pikachu</string>
    <string name="dropdown">dropdown</string>
    <string name="crash_report_toast">Sending crash report to Shadowfax..</string>
    <string name="facebook_app_id">1667570040126873</string>
    <string name="NEW_ORDER_DATA">app.shadowfax.in.NewOrderData</string>
    <string name="ORDER_MOD_DATA">app.shadowfax.in.orderModData</string>
    <string name="NEW_ORDER_DIALOG_INTENT">app.shaowfax.in.onNewOrderSMS</string>
    <string name="location_tracking_notification_title">Shadowfax Location</string>
    <string name="location_tracking_notification_message">Shadowfax is calculating your distance</string>
    <string name="payout_dialog_title">Payout Approval</string>
    <string name="payout_issue_dialog_title">Payout Issue</string>
    <string name="select_valid_payout_issue">Please select valid reason(s)</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="network_timeout">Request has timed out</string>
    <string name="server_error">Error processing your request</string>
    <string name="server_down">Server is down, please try again later</string>
    <string name="kms">kms</string>
    <string name="please_wait">Please wait ...</string>
    <string name="syncing_started">Syncing with server</string>
    <string name="new_order_dialog_header">New Order</string>
    <string name="new_order_dialog_message">You have received an order from \n</string>
    <string name="order_mod_header">Order Modified</string>
    <string name="order_mod_message_part_a">Your order with</string>
    <string name="order_mod_message_part_b">has been updated</string>
    <string name="go_off_duty_confirmation_title">Leave Duty?</string>
    <string name="go_off_duty_confirmation_message">"Are you sure you want to go OFF DUTY?</string>
    <string name="outside_cluster_title">Outside Cluster</string>
    <string name="outside_cluster_message">You are too far away from the cluster.</string>
    <string name="enable_network_connection_message">Please enable mobile data to connect to the internet.</string>
    <string name="button_open_network_settings">Open Network Settings</string>
    <string name="loading_dialog_title">Please wait</string>
    <string name="loading_dialog_default_message">Updating...</string>
    <string name="enable">Enable</string>
    <string name="ok">OK</string>
    <string name="pending_order_before_dismiss_title">Pending Order(s)</string>
    <string name="pending_orders_before_off_duty_part_a">You have </string>
    <string name="pending_orders_before_off_duty_part_b">pending order(s) to be completed. Please complete them before going OFF-DUTY.</string>
    <string name="code_static_text">CODE: </string>
    <string name="verify_internet">Verify Internet</string>
    <string name="check_internet_on_duty">Please check your internet connection to go On-Duty</string>
    <string name="check_internet_off_duty">Please check your internet connection to go Off-Duty</string>
    <string name="DownloadString">Downloading</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="logcat_sent">Logcat sent</string>
    <string name="sending_logcat">Sending Logcat</string>
    <string name="not_connected">Not Connected</string>
    <string name="connected">Connected</string>
    <string name="limited">Limited</string>
    <string name="inactive">Inactive</string>
    <string name="active">Active</string>
    <string name="retry_update">Retry Update</string>
    <string name="retry_update_message">Are you sure you want to retry downloading the app?</string>
    <string name="checking_app_update">Checking for updates</string>
    <string name="app_update_in_progress">Update is already in progress</string>
    <string name="internet_connectivity">Internet Connectivity</string>
    <string name="location">Location</string>
    <string name="send_logs">Send Logs</string>
    <string name="update_app">Update App</string>
    <string name="no_app_updates">No new updates</string>
    <string name="app_update_available">Downloading Update</string>
    <string name="daily_salary_payout">Payout Details</string>
    <string name="daily_earnings">DAILY EARNINGS | </string>
    <string name="select_screenshot">Select screenshots</string>
    <string name="screenshot_already_attached">Screenshot has already been attached</string>
    <string name="error_in_requesting_help">Either add screenshot(s) or add description to report issue</string>
    <string name="issue_being_reported">Issue is being reported, please wait</string>
    <string name="issue_reported_confirmation">Issue has been reported</string>
    <string name="describe_app_issue">Describe issue in the app</string>
    <string name="add_screenshot">ADD SCREENSHOT</string>
    <string name="report_issue">Report Issue</string>
    <string name="help_from_server_static_text">How can we help you?</string>
    <string name="no_help_options_from_server">No issue topics are present on the server at this time</string>
    <string name="no_help_option_selected">Please select a valid option to be reported</string>
    <string name="login">Rider Login</string>
    <string name="phone_number_wrapper">Phone Number</string>
    <string name="otp_wrapper">OTP</string>
    <string name="app_error_in_phone_number">Please enter a valid mobile number</string>
    <string name="server_error_in_phone_number">This phone number is not registered</string>
    <string name="app_error_in_otp">Please check the OTP</string>
    <string name="invalid_number_for_otp">Invalid number in OTP Verification</string>
    <string name="server_error_in_otp">Incorrect OTP</string>
    <string name="button_login">Login</string>
    <string name="phone_verification_in_progress">Verifying phone number, please wait.</string>
    <string name="button_validate_otp">Validate OTP</string>
    <string name="waiting_for_otp">Awaiting OTP</string>
    <string name="verifying_for_otp">Verifying OTP</string>
    <string name="otp_verification_in_progress">Verifying OTP, please wait.</string>
    <string name="switch_to_signup">BECOME A RIDER</string>
    <string name="signup">Signup</string>
    <string name="name_wrapper">Name</string>
    <string name="city_wrapper">City</string>
    <string name="select_city_title">Select a city</string>
    <string name="select_city_message">Please select a city from the list of cities mentioned below</string>
    <string name="app_error_in_name">Please enter a valid name</string>
    <string name="app_error_in_city">Please enter a valid city</string>
    <string name="button_signup">Become a rider</string>
    <string name="signup_in_progress">Processing your request, please wait.</string>
    <string name="switch_to_login">CLICK HERE TO LOGIN</string>
    <string name="monthly_earnings">MONTHLY EARNINGS | </string>
    <string name="km_payout_tab_subtitle">MON - SUN</string>
    <string name="weekly_earnings">WEEKLY EARNINGS | </string>
    <string name="payout_tab_title_salary">Per Day</string>
    <string name="payout_tab_title_km">Per Order</string>
    <string name="no_new_orders">No New Orders</string>
    <string name="order_list_refreshed">Order List Refreshed</string>
    <string name="server_error_in_order_list">Error in Fetching Data</string>
    <string name="payment_mode_cash">Cash</string>
    <string name="payment_mode_online">Prepaid</string>
    <string name="order_accepted">Order has been accepted</string>
    <string name="order_collected">Order has been collected</string>
    <string name="order_delivered">Order has been delivered</string>
    <string name="order_id">Order ID:</string>
    <string name="order_time">Order Time: </string>
    <string name="button_mark_order_accepted">Accept Order</string>
    <string name="button_mark_order_collected">Mark Collected</string>
    <string name="button_mark_order_delivered">Mark Delivered</string>
    <string name="order_delivered_confirmation_text">ORDER SUCCESSFULLY DELIVERED</string>
    <string name="button_dismiss_order_mod_notification">Ok</string>
    <string name="order_marked_already_accepted_on_server">The order has already been marked as <b>Accepted</b></string>
    <string name="order_marked_already_collected_on_server">The order has already been marked as <b>Collected</b></string>
    <string name="order_marked_already_delivered_on_server">The order has already been marked as <b>Delivered</b></string>
    <string name="order_marked_cancelled_on_server">The order has been <b>Cancelled</b></string>
    <string name="order_marked_deleted_on_server">The order has been <b>Cancelled</b></string>
    <string name="order_marked_rejected_on_server">The order has been <b>Cancelled</b></string>
    <string name="order_marked_no_rider_on_server">The order has been <b>Cancelled</b></string>
    <string name="order_marked_rider_changed_on_server">The order has been <b>Cancelled</b></string>
    <string name="client_order_id_static_text">Client Order Id:</string>
    <string name="rider_unique_code_indicator">CODE: </string>
    <string name="final_modifications_to_order">Finalising changes to order</string>
    <string name="server_will_initiate_call_with_customer">Call will be initiated shortly</string>
    <string name="server_unable_to_initiate_call_with_customer">Call cannot be initiated</string>
    <string name="fino_balance_indicator_text">Current Balance</string>
    <string name="fino_last_transaction_date_text">Date \n of previous transaction</string>
    <string name="fino_last_transaction_amount_text">Amount \n of previous transaction</string>
    <string name="get_fino_sms">Request SMS</string>
    <string name="rider_referral_static_text">Invite a friend to Shadowfax.</string>
    <string name="referral_successfully_submitted">Your referral has been successfully submitted</string>
    <string name="referral_not_submitted">There was an error submiting your referral</string>
    <string name="connect_to_facebook">Connect With Facebook</string>
    <string name="profile_hint_name">Name</string>
    <string name="profile_hint_mobile">Mobile</string>
    <string name="profile_hint_joining_date">Joining Date</string>
    <string name="profile_hint_city">City</string>
    <string name="profile_hint_manager_name">Manager</string>
    <string name="profile_hint_manager_number">Manager Number</string>
    <string name="app_update_available_title">Update Available</string>
    <string name="app_update_ready_title">Update Ready</string>
</resources>